--- a/src/app/game/game.component.html
+++ b/src/app/game/game.component.html
@@ -1,10 +1,43 @@
+<app-player
+  *ngFor="let player of game.players; let i = index"
+  [ngStyle]="{ 'top.px': 100 + i * 90 }"
+  [name]="player"
+  [playerActive]="i == game.currentPlayer"
+  class="player-position"
+></app-player>
+
 <div class="field">
-    <div class="card-stack">
+  <div class="card-stack">
+    <!-- card stack -->
+    <img
+      [ngStyle]="{ 'right.px': i * 5 }"
+      *ngFor="let c of [0, 1, 2, 3]; let i = index"
+      src="../../assets/img/playing_cards-master/card_cover.png"
+    />
+    <img
+      (click)="takeCard()"
+      class="top-card"
+      style="right: 25px"
+      src="../../assets/img/playing_cards-master/card_cover.png"
+    />
 
+    <img
+      *ngFor="let card of game.playedCards"
+      class="played-card"
+      src="../../assets/img/playing_cards-master/{{ card }}.png"
+      alt=""
+    />
 
-        <img [ngStyle]="{'right.px': i*5}" *ngFor="let c of [0,1,2,3]; let i = index "
-            src="../../assets/img/playing_cards-master/card_cover.png">
-        <img (click)="takeCard()" [class.pick-card]="pickCardAnimation" class="top-card" style="right: 25px;"
-            src="../../assets/img/playing_cards-master/card_cover.png">
-    </div>
+    <img
+      (click)="takeCard()"
+      *ngIf="pickCardAnimation"
+      class="pick-card"
+      style="right: 25px"
+      src="../../assets/img/playing_cards-master/{{ currentCard }}.png"
+    />
+  </div>
 </div>
+<app-game-info [card]="currentCard" class="pin-bottom"></app-game-info>
+<button mat-fab color="primary" (click)="openDialog()" class="btn-add">
+  <mat-icon>add</mat-icon>
+</button>
