--- a/src/app/game/game.component.html
+++ b/src/app/game/game.component.html
@@ -30,14 +30,14 @@
 
     <img
       (click)="takeCard()"
-      *ngIf="pickCardAnimation"
+      *ngIf="game.pickCardAnimation"
       class="pick-card"
       style="right: 25px"
-      src="../../assets/img/playing_cards-master/{{ currentCard }}.png"
+      src="../../assets/img/playing_cards-master/{{ game.currentCard }}.png"
     />
   </div>
 </div>
-<app-game-info [card]="currentCard" class="pin-bottom"></app-game-info>
+<app-game-info [card]="game.currentCard" class="pin-bottom"></app-game-info>
 <button mat-fab color="primary" (click)="openDialog()" class="btn-add">
   <mat-icon>add</mat-icon>
 </button>
